[WIP] Support file info without algo.